# uri

./: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  network-uri.pc.in
include/: Makefile.am
include/network/uri/: uri.hpp  uri_builder.hpp
include/network/uri/detail/: translate.hpp  uri_parts.hpp
src/: Makefile.am  uri.cpp  uri_builder.cpp
src/detail/: grammar.hpp  uri_advance_parts.cpp  uri_advance_parts.hpp  uri_normalize.cpp  uri_normalize.hpp  uri_parse.cpp  uri_parse.hpp  uri_parse_authority.cpp  uri_parse_authority.hpp  uri_percent_encode.hpp  uri_resolve.cpp  uri_resolve.hpp
test/: CMakeLists.txt  optional_test.cpp  string_utility.hpp  test_uri.hpp  uri_test.cpp
