

nobase_include_HEADERS = \
	network/uri.hpp \
	network/uri/config.hpp \
	network/uri/uri.hpp \
	network/uri/uri_builder.hpp \
	network/uri/uri_errors.hpp \
	network/uri/uri_io.hpp \
	network/uri/detail/decode.hpp \
	network/uri/detail/encode.hpp \
	network/uri/detail/translate.hpp \
	network/uri/detail/uri_parts.hpp

